--- a/templates/craigslist/search.html
+++ b/templates/craigslist/search.html
@@ -1,5 +1,5 @@
 {% extends 'craigslist/base.html' %} {% block content %}
-<h2 style="text-align: center">{{ search | title }}</h2>
+<h2 style="text-align: center">{{ s| title }}</h2>
 
 <div class="row">
     {% for post in final_postings %}
