--- a/templates/craigslist/base.html
+++ b/templates/craigslist/base.html
@@ -2,11 +2,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Codedaddies List</title>
+    <title>CraigsList</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="{% static " css/style.css " %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <div class="container nav-wrapper">
-            <a href="/" class="brand-logo">Codedaddies List</a>
+            <a href="/" class="brand-logo">CraigsList</a>
             <ul id="nav-mobile" class="right">
                 <li><a href="/">Home</a></li>
             </ul>
@@ -23,7 +23,7 @@
     </nav>
 
     <div class="container">
-        <h1 style="text-align: center">What do you want to search for on Codedaddies List?</h1>
+        <h1 style="text-align: center">What do you want to search for on CraigsList?</h1>
         <div class="row">
             <div class="col s4">
                 <!-- Promo Content 1 goes here -->
@@ -35,7 +35,6 @@
             </div>
 
             <div class="col s4">
-                <!-- Promo Content 2 goes here -->
                 <div class="center">
                     <i class="large material-icons" style="color: orange">camera</i>
                     <p>Filter your searches</p>
@@ -44,7 +43,6 @@
             </div>
 
             <div class="col s4">
-                <!-- Promo Content 3 goes here -->
                 <div class="center">
                     <i class="large material-icons" style="color: blue">chrome_reader_mode</i>
                     <p>A much sexier front-end to Craigslist</p>
@@ -61,7 +59,6 @@
         </button>
         </form>
 
-        <!--Uses Dry Principle-->
         {% block content %} {% endblock content %}
     </div>
 
